Fix building tests
Change-Id: Id426085af5ffbd5176923e68eda3d18ad210fd4e